--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "OpenTechne-web-page",
-  "version": "1.0.0",
-  "description": "OpeTechne web page",
-  "main": "",
-  "repository": "git@github.com:OpenTechne/OpenTechne-web-page.git",
-  "author": "OpenTechne",
-  "license": "MIT",
-  "private": false,
+  "name": "opentechne-web-page",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "preact-cli": "3.4.5"
+    "autoprefixer": "10.4.14",
+    "next": "13.4.0",
+    "postcss": "8.4.23",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.2"
   }
 }
